# Simeona

./: README.md  frames_2024-06-07_18.07.55.gv  moving.sh  set_speed_macro
Robotic/: .cproject  .mxproject  .project  Robotic Debug.launch  Robotic.ioc
Robotic/Core/Inc/: circular_buffer.h  motor_control.h  odom.h  struct_types.h  task_scheduler.h  uart.h
Robotic/Core/Src/: main.c  motor_control.c  odom.c  task_scheduler.c  uart.c
Robotic/Debug/: Robotic.elf  Robotic.list  Robotic.map  makefile
config/: README.md
ros2/: .bashrc  10-usb-serial.rules  config.txt
ros2/robotic_description/: CMakeLists.txt
ros2/robotic_description/urdf/: robotic.gazebo  robotic.urdf.xacro
ros2/robotic_hardware/: CMakeLists.txt  package.xml
ros2/robotic_hardware/include/: wheel.hpp
ros2/robotic_hardware/src/: nucleo_comms.cpp  robotic_diffdrive.cpp  robotic_main.cpp
ros2/robotic_interfaces/: CMakeLists.txt
ros2/robotic_interfaces/action/: MoveDistance.action  MoveXY.action  Rotate.action
ros2/robotic_interfaces/msg/: Command.msg
ros2/robotic_pkg/: CMakeLists.txt  package.xml  requirements.txt
ros2/robotic_pkg/config/: mapper_params_online_async.yaml  params.yaml
ros2/robotic_pkg/launch/: robotic.launch.py
ros2/robotic_pkg/maps/: stan_map.pgm  stan_map.yaml
ros2/robotic_pkg/robotic_pkg/: Constants.py  Odometry.py  Position.py
ros2/robotic_pkg/rviz/: odom_test.rviz
ros2/robotic_pkg/scripts/: movement_node.py  pid_node.py  py_node.py  template_node.py  tof_node.py  uart_com_node.py
ros2/robotic_pkg/src/: cpp_node.cpp
ros2/robotic_pkg/urdf/: robotic.urdf
shield/: BOM-PAMI.xlsx  Nucleo Shield - PAMI.f3z
src/: .bashrc
src/robotic_description/: package.xml
src/robotic_description/launch/: robotic_gazebo.launch.py
src/robotic_description/rviz/: rviz_robotic.rviz
src/robotic_description/urdf/: robotic.urdf.xacro  ros2_control.xacro
src/robotic_hardware/: CMakeLists.txt  robot_hardware.xml
src/robotic_hardware/include/robotic_hardware/: definitions.hpp  robotic_diffdrive.hpp
src/robotic_hardware/src/: robotic_diffdrive.cpp
src/robotic_interfaces/: package.xml
src/robotic_interfaces/action/: MoveDistance.action
src/robotic_interfaces/msg/: Command.msg  Odom.msg
src/robotic_pkg/: CMakeLists.txt  package.xml  requirements.txt
src/robotic_pkg/config/: ekf.yaml
src/robotic_pkg/launch/: robotic.launch.py  robotic_gazebo.launch.py  robotic_rviz.launch.py  test.launch.py
src/robotic_pkg/maps/: stan_map.yaml
src/robotic_pkg/robotic_pkg/: Constants.py
src/robotic_pkg/rviz/: sllidar_ros2.rviz
src/robotic_pkg/scripts/: movement_node.py  uart_com_node.py
stan_bag/: description.txt  metadata.yaml
stm32/: set_speed_macro
stm32/Robotic/: pinout.ods
stm32/Robotic/Debug/: Robotic.elf  Robotic.list  Robotic.map  (+1 more)
(+38 files in other folders)
